kindergarten-registry_GitOps/student-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      serviceAccountName: vault-auth  # Service account যোগ করুন
      containers:
      - name: student-service
<<<<<<< HEAD
        image: nanil0034/kindergarten-registry-student:26
=======
        image: nanil0034/kindergarten-registry-student:58
>>>>>>> 314c78ac04c18df1151a75d5a02d66ffd6e90536
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: vault-token
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          readOnly: true
      volumes:
      - name: vault-token
        projected:
          sources:
          - serviceAccountToken:
              audience: vault
              expirationSeconds: 7200
              path: token
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-service
  ports:
    - protocol: TCP
      port: 5001
      nodePort: 30001
  type: NodePort
