kindergarten-registry_GitOps/teacher-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teacher-service
  template:
    metadata:
      labels:
        app: teacher-service
    spec:
      containers:
      - name: teacher-service
        image: nanil0034/kindergarten-registry-teacher:47
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: teacher-service
spec:
  selector:
    app: teacher-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
