kindergarten-registry_GitOps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kindergarten-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: nasirtechtalks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /std
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 5001
      - path: /emp
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 5003
      - path: /tech
        pathType: Prefix
        backend:
          service:
            name: teacher-service
            port:
              number: 5002










































# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kindergarten-ingress
#   namespace: default
#   annotations:
#     # ALB-specific annotations
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:287303197111:certificate/131b8c78-c250-436e-8de0-e50c22f41245
# spec:
#   ingressClassName: alb
#   rules:
#   - host: nasirtechtalks.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: frontend
#             port:
#               number: 80
#       - path: /std
#         pathType: Prefix
#         backend:
#           service:
#             name: student-service
#             port:
#               number: 5001
#       - path: /emp
#         pathType: Prefix
#         backend:
#           service:
#             name: employee-service
#             port:
#               number: 5003
#       - path: /tech
#         pathType: Prefix
#         backend:
#           service:
#             name: teacher-service
#             port:
#               number: 5002
